# FastTokenizer

./: CMakeLists.txt  README.md  test.py
include/: tokenizer.h
paddlenlp/: tokenizer.h
src/: tokenizer.cc  tokenizer.cpp  tokenizer.h
